Completed Profile CRUD.
-All profile CRUD actions now work. (create, read, update, delete)
-All user CRUD actions work. (create, sign-in, edit pwd, sign-out)

******NEXT******

(8) Build out UI for chat
(9) Build actual chat functionality
  -edit profile should update username in the chat box
(10) Make sure only broadcasting to the correct client (see socket.io docs)
(11) Improve AI
	(a) Continue reading through docs (see notes on what I've read so far)
	(b) Continue adding and refining intents, etc.
	(c) Guessing Game
	(d) Movie quotes
	(e) That’s a problem for future you (Chris quote!)
	(f) Do you perceive me to be a person? (follow up or delete)
(12) Implement web hooks?
	(a) Webhook: Implement Reminders (Twillo)
	(b) Webhook: Implement Google Searches (Google API?)
(13) Style
(14) ReadME
(15) Debug/Test

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -166,6 +166,16 @@ footer {
   width: 100vw;
 }
 
+.delete-button {
+  background-color: red;
+  color: white;
+}
+
+.delete-button:hover {
+  background-color: black;
+  color: white;
+}
+
 // ----------------- Other View -------------------------------
 
 // ----------------- Other View -------------------------------
