Added socket event for sending message and handles receives messages.
Client emits socket event when a user inputs a message. The API takes
that and sends to dialogflow and returns the response to the client.
The client appends the response to the DOM.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -230,6 +230,11 @@ button:focus {
   color: white;
 }
 
+.content-column {
+  width: 63.333333333333333333%;
+  margin-left: 10%;
+}
+
 #chatInput {
   width: 81%;
   margin-right: 2.333333333333%;
