--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -149,15 +149,18 @@ footer {
 }
 
 .register-toggle {
-  background-color: black;
-  color: white;
-  border: 1px solid black;
+  color: $dark-gray;
+  font-family: 'Righteous', cursive;
+  text-align: center;
+  font-style: italic;
+  font-size: 13px;
+  margin-top: -6px;
+  margin-bottom: -6px;
 }
 
 .register-toggle:hover {
-  background-color: white;
   color: black;
-  border: 1px solid black;
+  cursor: pointer;
 }
 
 // ----------------- Chat View --------------------------------
