--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -269,6 +269,11 @@ button:focus {
   // font-family: 'Warnes', cursive;
 }
 
+.list-number {
+  color: $tangerine;
+  font-family: 'Righteous', cursive;
+}
+
 // ----------------- Google Search Result -------------------------------
 
 .results-wrapper {
