Implemented Spotify functionality.
(1) modularized google readout by filtering through a handlebars module
(2) added edge case for google if there are no search results
(3) client now receives a spotify socket event and displays results

--- a/assets/scripts/templates/google-readout.handlebars
+++ b/assets/scripts/templates/google-readout.handlebars
@@ -4,7 +4,7 @@
     <div class="col-xs-1 search-space"></div>
     <div class="col-xs-8 search-info">
       <div class="row"><div class="col-xs-12 search-title" id="search-title-{{result.cacheId}}">{{result.title}}</div></div>
-      <div class="row"><div class="col-xs-12 search-link"><a id="search-link-{{result.cacheId}}" href="{{result.link}}">{{result.link}}</a></div></div>
+      <div class="row"><div class="col-xs-12 search-link"><a id="search-link-{{result.cacheId}}" href="{{result.link}}" target="_blank">{{result.link}}</a></div></div>
       <div class="row"><div class="col-xs-12 search-snippet" id="search-snippet-{{result.cacheId}}">{{result.snippet}}</div></div>
     </div>
   </div>
